2011-07-25  Ojan Vafai  <ojan@chromium.org>

        always show flakiness details on the builder page
        https://bugs.webkit.org/show_bug.cgi?id=65139

        Reviewed by Tony Chang.

        In order to simplify the UI, we hide the flakiness details by default,
        but there's no actual use-case for this page without the flakiness details.
        So get rid of that option and always show the flakiness details.

        * TestResultServer/static-dashboards/flakiness_dashboard.html:

2011-07-25  Ojan Vafai  <ojan@chromium.org>

        simplify the UI of the header above the test list table
        https://bugs.webkit.org/show_bug.cgi?id=65136

        Reviewed by Adam Barth.

        Use checkboxes instead of links since this is really about which tests to include.
        Ends up using less text and put the checkboxes to the right of the header instead of below it.

        * TestResultServer/static-dashboards/flakiness_dashboard.html:
        * TestResultServer/static-dashboards/flakiness_dashboard_tests.js:

2011-07-25  Chris Rogers  <crogers@google.com>

        Update new-run-webkit-tests to accomodate binary audio data
        https://bugs.webkit.org/show_bug.cgi?id=65135

        Reviewed by Dirk Pranke.

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2011-07-25  Chris Rogers  <crogers@google.com>

        Update Chromium DRT to output binary (instead of base64-encoded) data for web audio testing
        https://bugs.webkit.org/show_bug.cgi?id=65039

        Reviewed by Tony Chang.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setAudioData):
        * DumpRenderTree/chromium/LayoutTestController.h:
        (LayoutTestController::audioData):
        * DumpRenderTree/chromium/TestEventPrinter.cpp:
        (DRTPrinter::handleAudioHeader):
        (TestShellPrinter::handleAudioHeader):
        * DumpRenderTree/chromium/TestShell.cpp: